--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,8 @@ dependencies:
   app_settings: 5.0.0
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^4.0.0
-  firebase_auth: ^6.0.0
-  cloud_firestore: ^6.0.0
   google_maps_flutter: ^2.12.3
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
