--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -46,6 +46,6 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>GMSApiKey</key>
-	<string>AIzaSyAKTKlCiySOc6QRL53NW8k75AvfgIdmMIA</string>
+	<string>${GOOGLE_MAPS_API_IOS_KEY}</string>
 </dict>
 </plist>
